[package]
name = "passdb"
version = "0.1.0"
edition = "2021"
description = "Simple password encryption/decryption command line tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
magic-crypt = "3.1"
clap = "3.1"
rpassword = "7.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
git2 = "0.15"
